<resources>
    <string name="app_name">TheRunner</string>
    <string name="sign_up">SIGN UP </string>
    <string name="submit">Submit</string>
    <string name="username">Enter username</string>
    <string name="login">LOGIN </string>
    <string name="new_user">Or are you new to TheRunner? </string>
    <string name="start">START</string>
    <string name="time">TIME</string>
    <string name="kilometers">KILOMETERS</string>
    <string name="finish">FINISH</string>
    <string name="goToHomepage">Go to homepage</string>
    <string name="average_speed">AVERAGE SPEED</string>
    <string name="max_speed">MAX SPEED</string>
    <string name="logout">LOGOUT</string>
    <string name="previous_runs">Previous Runs</string>

</resources>
