<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SignUp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"
        android:textColor="@color/white_greyish"
        android:textSize="20sp"
        android:textStyle="bold"
        />

    <View
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <!-- This view adds space between the elements !-->
    </View>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:textSize="16dp"
        android:textColorHint="@color/white_greyish"
        android:id="@+id/submitLogin"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/submit"
        android:onClick="signUpSubmit"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <!-- This view adds space between the elements !-->
    </View>
    <View
        android:layout_width="fill_parent"
        android:layout_height="50dp">
        <!-- This view adds space between the elements !-->
    </View>

</LinearLayout>