<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:background="@color/background_color">

    <View
        android:layout_width="fill_parent"
        android:layout_height="20dp">
        <!-- This view adds space between the elements !-->
    </View>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/previous_runs"
        android:textColor="@color/white_greyish"
        android:textSize="20sp"
        android:textStyle="bold"
        android:paddingTop="12dp"/>
    <View
        android:layout_width="fill_parent"
        android:layout_height="40dp">
        <!-- This view adds space between the elements !-->
    </View>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:textStyle="bold"
            android:text="@string/time"/>
        <View
            android:layout_height="fill_parent"
            android:layout_width="100dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:text="@string/kilometers"
            android:textStyle="bold"/>

        <View
            android:layout_height="fill_parent"
            android:layout_width="80dp">
        </View>
        <!-- This view adds space between the elements !-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:textStyle="bold"
            android:text="@string/average_speed"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/time1"/>
        <View
            android:layout_height="fill_parent"
            android:layout_width="50dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/kilometers1"/>
        <View
            android:layout_height="fill_parent"
            android:layout_width="50dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/avgspeed1"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_greyish"/>
    <!-- This view adds a horizontal line between the elements !-->
    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp">
        <!-- This view adds space between the elements !-->
    </View>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:textStyle="bold"
            android:text="@string/time"/>
        <View
            android:layout_height="fill_parent"
            android:layout_width="100dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:text="@string/kilometers"
            android:textStyle="bold"/>

        <View
            android:layout_height="fill_parent"
            android:layout_width="80dp">
        </View>
        <!-- This view adds space between the elements !-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:textStyle="bold"
            android:text="@string/average_speed"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/time2"/>

        <View
            android:layout_height="fill_parent"
            android:layout_width="50dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/kilometers2"/>

        <View
            android:layout_height="fill_parent"
            android:layout_width="50dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/avgspeed2"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_greyish"/>
    <!-- This view adds a horizontal line between the elements !-->
    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp">
        <!-- This view adds space between the elements !-->
    </View>

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:textStyle="bold"
            android:text="@string/time"/>
        <View
            android:layout_height="fill_parent"
            android:layout_width="100dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:text="@string/kilometers"
            android:textStyle="bold"/>

        <View
            android:layout_height="fill_parent"
            android:layout_width="80dp">
        <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:textStyle="bold"
            android:text="@string/average_speed"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/time3"/>

        <View
            android:layout_height="fill_parent"
            android:layout_width="50dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/kilometers3"/>

        <View
            android:layout_height="fill_parent"
            android:layout_width="50dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/avgspeed3"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/white_greyish"/>
    <!-- This view adds a horizontal line between the elements !-->
    <View
        android:layout_width="fill_parent"
        android:layout_height="30dp">
        <!-- This view adds space between the elements !-->
    </View>

    <LinearLayout
        android:id="@+id/linearLayout7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:textStyle="bold"
            android:text="@string/time"/>
        <View
            android:layout_height="fill_parent"
            android:layout_width="100dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:text="@string/kilometers"
            android:textStyle="bold"/>

        <View
            android:layout_height="fill_parent"
            android:layout_width="80dp">
        <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white_greyish"
            android:textStyle="bold"
            android:text="@string/average_speed"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/time4"/>

        <View
            android:layout_height="fill_parent"
            android:layout_width="50dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/kilometers4"/>

        <View
            android:layout_height="fill_parent"
            android:layout_width="50dp">
            <!-- This view adds space between the elements !-->
        </View>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:textColor="@color/white_greyish"
            android:id="@+id/avgspeed4"/>
    </LinearLayout>

</LinearLayout>